Added skip intro videos, smooth stuttering FPS, and changed FOV.

--- a/Fallout4.ini
+++ b/Fallout4.ini
@@ -3,6 +3,10 @@ sLanguage=en
 uGridsToLoad=5
 uExterior Cell Buffer=36
 bDisableAllGore=0
+sIntroSequence=0
+fChancesToPlayAlternateIntro=0 
+uMainMenuDelayBeforeAllowSkip=0
+iFPSClamp=60
 
 [ScreenSplatter]
 bBloodSplatterEnabled=1
@@ -22,6 +26,9 @@ bNvGodraysEnable=1
 bDynamicObjectQueryManager=1
 bMultiThreadedAccumulation=1
 bMultiThreadedRenderingUNP=1
+
+fDefaultWorldFOV=90
+fDefault1stPersonFOV=90
 
 fSAORadius=108.2
 fSAOBias=0.6
