--- a/Fallout4Prefs.ini
+++ b/Fallout4Prefs.ini
@@ -2,8 +2,8 @@
 flocalShadowMapHalveEveryXUnit=750.0000
 focusShadowMapDoubleEveryXUnit=450.0000
 fShadowBiasScale=1.0000
-fDirShadowDistance=20000
-fShadowDistance=20000
+fDirShadowDistance=20000.0000
+fShadowDistance=20000.0000
 uiOrthoShadowFilter=3
 uiShadowFilter=3
 iShadowMapResolution=4096
@@ -19,7 +19,7 @@ bComputeShaderDeferredTiledLighting=1
 iMaxFocusShadowsDialogue=4
 iMaxFocusShadows=4
 bForceIgnoreSmoothness=0
-fBlendSplitDirShadow=48
+fBlendSplitDirShadow=48.0000
 bSinglePassDirShadow=1
 bEnableWetnessMaterials=1
 fTessFactorMaxDistanceScale=100.0000
@@ -33,8 +33,8 @@ fMeshLODLevel2FadeTreeDistance=2048.0000
 fMeshLODLevel1FadeTreeDistance=2844.0000
 fInteriorMeshLODLevel2FadeDist=1950.0000
 fInteriorMeshLODLevel1FadeDist=2600.0000
-fMeshLODLevel2FadeDist=999999
-fMeshLODLevel1FadeDist=999999
+fMeshLODLevel2FadeDist=999999.0000
+fMeshLODLevel1FadeDist=999999.0000
 iMaxAnisotropy=16
 iPresentInterval=1
 bTopMostWindow=0
@@ -143,15 +143,15 @@ bUseWaterRefractions=1
 bUseWaterReflections=1
 bUseWaterDepth=1
 [TerrainManager]
-fTreeLoadDistance=75000
-fBlockMaximumDistance=250000
-fBlockLevel2Distance=110000
-fBlockLevel1Distance=90000
-fBlockLevel0Distance=60000
-fSplitDistanceMult=1.5
+fTreeLoadDistance=75000.0000
+fBlockMaximumDistance=250000.0000
+fBlockLevel2Distance=110000.0000
+fBlockLevel1Distance=90000.0000
+fBlockLevel0Distance=60000.0000
+fSplitDistanceMult=1.5000
 bShowLODInEditor=0
 [Grass]
-fGrassStartFadeDistance=7000
+fGrassStartFadeDistance=7000.0000
 fGrassMaxStartFadeDistance=7000.0000
 fGrassMinStartFadeDistance=400.0000
 [Decals]
@@ -162,9 +162,9 @@ uMaxSkinDecals=100
 uMaxSkinDecalsPerActor=40
 [LOD]
 fLODFadeOutMultSkyCell=1.0000
-fLODFadeOutMultObjects=30
-fLODFadeOutMultItems=10
-fLODFadeOutMultActors=15
+fLODFadeOutMultObjects=30.0000
+fLODFadeOutMultItems=10.0000
+fLODFadeOutMultActors=15.0000
 [BlurShaderHDR]
 bDoHighDynamicRange=0
 [BlurShader]
