Added option to use third-party textures.

--- a/Fallout4.ini
+++ b/Fallout4.ini
@@ -84,7 +84,8 @@ sResourceIndexFileList=Fallout4 - Textures1.ba2, Fallout4 - Textures2.ba2, Fallo
 sResourceStartUpArchiveList=Fallout4 - Startup.ba2, Fallout4 - Shaders.ba2, Fallout4 - Interface.ba2
 SResourceArchiveList=Fallout4 - Voices.ba2, Fallout4 - Meshes.ba2, Fallout4 - MeshesExtra.ba2, Fallout4 - Misc.ba2, Fallout4 - Sounds.ba2, Fallout4 - Materials.ba2
 SResourceArchiveList2=Fallout4 - Animations.ba2
-sResourceDataDirsFinal=STRINGS\
+; sResourceDataDirsFinal=STRINGS\
+sResourceDataDirsFinal=STRINGS\, TEXTURES\
 SGeometryPackageList=Fallout4 - Geometry.csg
 SCellResourceIndexFileList=Fallout4.cdx
 SResourceArchiveMemoryCacheList= Fallout4 - Misc.ba2, Fallout4 - Shaders.ba2, Fallout4 - Interface.ba2, Fallout4 - Materials.ba2
