--- a/Fallout4.ini
+++ b/Fallout4.ini
@@ -85,7 +85,7 @@ sResourceStartUpArchiveList=Fallout4 - Startup.ba2, Fallout4 - Shaders.ba2, Fall
 SResourceArchiveList=Fallout4 - Voices.ba2, Fallout4 - Meshes.ba2, Fallout4 - MeshesExtra.ba2, Fallout4 - Misc.ba2, Fallout4 - Sounds.ba2, Fallout4 - Materials.ba2
 SResourceArchiveList2=Fallout4 - Animations.ba2
 ; sResourceDataDirsFinal=STRINGS\
-sResourceDataDirsFinal=STRINGS\, TEXTURES\
+sResourceDataDirsFinal=STRINGS\, TEXTURES\, MUSIC\, SOUND\, INTERFACE\, MESHES\, PROGRAMS\, MATERIALS\, LODSETTINGS\, VIS\, MISC\, SCRIPTS\, SHADERSFX\
 SGeometryPackageList=Fallout4 - Geometry.csg
 SCellResourceIndexFileList=Fallout4.cdx
 SResourceArchiveMemoryCacheList= Fallout4 - Misc.ba2, Fallout4 - Shaders.ba2, Fallout4 - Interface.ba2, Fallout4 - Materials.ba2
