Removed FPS clamp (causing physics problems) and disabled vsync. Using NVIDIA vsync (see README.md).

--- a/Fallout4.ini
+++ b/Fallout4.ini
@@ -6,13 +6,13 @@ bDisableAllGore=0
 sIntroSequence=0
 fChancesToPlayAlternateIntro=0 
 uMainMenuDelayBeforeAllowSkip=0
-iFPSClamp=60
+;iFPSClamp=61
 
 [ScreenSplatter]
 bBloodSplatterEnabled=1
 
 [Display]
-iPresentInterval=1
+iPresentInterval=0
 bDeferredCommands=1
 fShadowLODMaxStartFade=1000.0
 fSpecularLODMaxStartFade=2000.0
