Increased gamepad sensitivity. GTX 980 Ti hardware.

--- a/Fallout4Prefs.ini
+++ b/Fallout4Prefs.ini
@@ -51,7 +51,7 @@ iMaxSkinDecalsPerFrame=25
 iMaxDecalsPerFrame=100
 fDefaultWorldFOV=70
 fDefault1stPersonFOV=70
-sD3DDevice="NVIDIA GeForce GTX 970"
+sD3DDevice="NVIDIA GeForce GTX 980 Ti"
 iTexMipMapSkip=0
 bEnableRainOcclusion=1
 iAdapter=0
@@ -107,7 +107,7 @@ bDialogueCameraEnable=1
 bShowCompass=1
 [Controls]
 fMouseHeadingSensitivity=0.0300
-fGamepadHeadingSensitivity=0.6667
+fGamepadHeadingSensitivity=0.8334
 bAlwaysRunByDefault=1
 bInvertYValues=0
 bGamePadRumble=1
