Disabled AA for now.

--- a/Fallout4Prefs.ini
+++ b/Fallout4Prefs.ini
@@ -23,7 +23,7 @@ fBlendSplitDirShadow=48.0000
 bSinglePassDirShadow=1
 bEnableWetnessMaterials=1
 fTessFactorMaxDistanceScale=100.0000
-sAntiAliasing=TAA
+sAntiAliasing=
 fLeafAnimDampenDistEnd=4600.0000
 fLeafAnimDampenDistStart=3600.0000
 fMeshLODFadePercentDefault=1.2000
