Increased fBlendSplitDirShadow to reduce shadow draw in, using FXAA, disabled v-sync (using g-sync).

--- a/Fallout4Prefs.ini
+++ b/Fallout4Prefs.ini
@@ -19,11 +19,11 @@ bComputeShaderDeferredTiledLighting=1
 iMaxFocusShadowsDialogue=4
 iMaxFocusShadows=4
 bForceIgnoreSmoothness=0
-fBlendSplitDirShadow=48.0000
+fBlendSplitDirShadow=512.0000
 bSinglePassDirShadow=1
 bEnableWetnessMaterials=1
 fTessFactorMaxDistanceScale=100.0000
-sAntiAliasing=
+sAntiAliasing=FXAA
 fLeafAnimDampenDistEnd=4600.0000
 fLeafAnimDampenDistStart=3600.0000
 fMeshLODFadePercentDefault=1.2000
@@ -36,7 +36,7 @@ fInteriorMeshLODLevel1FadeDist=2600.0000
 fMeshLODLevel2FadeDist=999999.0000
 fMeshLODLevel1FadeDist=999999.0000
 iMaxAnisotropy=16
-iPresentInterval=1
+iPresentInterval=0
 bTopMostWindow=0
 bMaximizeWindow=0
 bBorderless=1
