Reenabled TAA AA and reduced HUD opacity.

--- a/Fallout4Prefs.ini
+++ b/Fallout4Prefs.ini
@@ -23,7 +23,7 @@ fBlendSplitDirShadow=512.0000
 bSinglePassDirShadow=1
 bEnableWetnessMaterials=1
 fTessFactorMaxDistanceScale=100.0000
-sAntiAliasing=FXAA
+sAntiAliasing=TAA
 fLeafAnimDampenDistEnd=4600.0000
 fLeafAnimDampenDistStart=3600.0000
 fMeshLODFadePercentDefault=1.2000
@@ -80,7 +80,7 @@ fModMenuEffectColorR=0.4900
 [MAIN]
 fSkyCellRefFadeDistance=150000.0000
 bCrosshairEnabled=1
-fHUDOpacity=1.0000
+fHUDOpacity=0.8000
 bSaveOnPause=1
 bSaveOnTravel=1
 bSaveOnWait=1
