Added geometry settings for power armor on ultrawide screen.

--- a/Fallout4.ini
+++ b/Fallout4.ini
@@ -7,6 +7,11 @@ sIntroSequence=0
 fChancesToPlayAlternateIntro=0 
 uMainMenuDelayBeforeAllowSkip=0
 ;iFPSClamp=61
+bForceUpdateDiffuseOnly=0
+;iTextureUpgradeDistance1=2400
+;iTextureUpgradeDistance0=1200
+;iTextureDegradeDistance1=3000
+;iTextureDegradeDistance0=1600
 
 [ScreenSplatter]
 bBloodSplatterEnabled=1
@@ -60,6 +65,10 @@ fSafeZoneXWide=64.0
 fSafeZoneYWid=36.0
 fSafeZoneXWide16x10=64.0
 fSafeZoneYWide16x10=36.0
+fUIPowerArmorGeometry_TranslateW=0.00001
+fUIPowerArmorGeometry_TranslateZ=14.0000
+fUIPowerArmorGeometry_TranslateX=0.0001
+fUIPowerArmorGeometry_TranslateY=265.0000
 
 [MapMenu]
 uLockedObjectMapLOD=16
