Increased the range at witch detailed shadows are drawn.

--- a/Fallout4.ini
+++ b/Fallout4.ini
@@ -8,10 +8,10 @@ fChancesToPlayAlternateIntro=0
 uMainMenuDelayBeforeAllowSkip=0
 ;iFPSClamp=61
 bForceUpdateDiffuseOnly=0
-;iTextureUpgradeDistance1=2400
-;iTextureUpgradeDistance0=1200
-;iTextureDegradeDistance1=3000
-;iTextureDegradeDistance0=1600
+iTextureUpgradeDistance1=2400
+iTextureUpgradeDistance0=1200
+iTextureDegradeDistance1=3000
+iTextureDegradeDistance0=1600
 
 [ScreenSplatter]
 bBloodSplatterEnabled=1
