Added patch 1.3 features.

--- a/Fallout4Prefs.ini
+++ b/Fallout4Prefs.ini
@@ -172,3 +172,8 @@ bUseBlurShader=0
 [Launcher]
 uLastAspectRatio=1
 bEnableFileSelection=1
+[NVHBAO]
+bEnable=1
+[NVFlex]
+bNVFlexEnable=1
+iQuality=1
